<resources>
    <string-array name="language_options">
        <item>English</item>
        <item>Bahasa Indonesia</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>id</item>
    </string-array>
    <string name="app_name">EduDOExam</string>
    <string name="app_moto" translatable="false">AI Smart Tracker for Student Focus &amp; Engagement</string>
    <string name="title_activity_dashboard2" translatable="false">DashboardActivity2</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="nav_home">Home</string>
    <string name="nav_exams">Exams</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="pref_upcoming_notification" translatable="false">ref-upcoming-notification</string>
    <string name="pref_dark_mode" translatable="false">ref-dark-mode</string>
    <string name="pref_language" translatable="false">language_preference</string>
    <string name="title_activity_dashboard">Dashboard Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_histories">Histories</string>
    <string name="title_permission_denied">Permission Denied</string>
    <string name="description_permission_capture_denied">Capture images requires camera access permission, otherwise this feature cannot be used.</string>
    <string name="get_it">Get it</string>
    <string name="user_email">User Email</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender">Gender</string>
    <string name="save_changes">Save Changes</string>
    <string name="question">Question</string>
    <string name="correct_option">Correct Option</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="we_will_be_back_once_internet_connection_is_available">we will be back once internet connection is available</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="necessary_requirements">Necessary requirements</string>
    <string name="next">Next</string>
    <string name="ongoing_exams">Ongoing Exams</string>
    <string name="upcoming_exams">Upcoming Exams</string>
    <string name="no_upcoming_exams">There are no upcoming exams</string>
    <string name="no_students">No Students</string>
    <string name="no_participants_found">No Participants Found!</string>
    <string name="no_questions_found">No Questions Found!</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="form_register_help_label">All fields below are required to create an account.</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="click_here">Click Here</string>
    <string name="title_activity_exam" translatable="false">Exam Activity</string>
    <string name="exams">Exams</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="exam_result">Exam Result</string>
    <string name="exam_detail">Exam Detail</string>
    <string name="form_question">Form Question</string>
    <string name="exam_config">Exam Config</string>
    <string name="select_language">Select Language</string>
    <string name="upcoming">Upcoming</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_theme">Enable dark theme</string>
    <string name="disable_dark_theme">Disable dark theme</string>
    <string name="notification">Notification</string>
    <string name="theme">Theme</string>
    <string name="join_exam">Join Exam</string>
    <string name="answered">Answered</string>
    <string name="ongoing">Ongoing</string>
    <string name="exam_code_copied_to_clipboard">Exam Code Copied to Clipboard</string>
    <string name="starting_in">Starting in %1$s</string>
    <string name="this_exam_has_not_started_yet">This exam has not started yet!</string>
    <string name="successful">Successful</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="selected_date_and_time_must_be_after">Selected date and time must be after %1$s</string>
    <string name="removed_from_blocked_users">%1$s removed from blocked users</string>
    <string name="exam_updated">Exam updated</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_unblock_user_from_this_exam_user_detail_name_email_this_action_cannot_be_undone">Are you sure you want to unblock user from this exam?\nUser detail:\nName\t: %1$s\nEmail\t: %2$s\nThis action cannot be undone.</string>
    <string name="unblock">Unblock</string>
    <string name="remove_from_block">Remove From Block</string>
    <string name="option_must_be_not_empty">Option must be not empty</string>
    <string name="description_must_be_at_least_3_words">Description must be at least 3 words</string>
    <string name="select_duration_mm_ss">Select Duration (MM:SS)</string>
    <string name="d_02d_minute">%d:%02d Minute</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_retrieve_file_path">Failed to retrieve file path.</string>
    <string name="missing_exam_id">Missing exam id</string>
    <string name="success">Success</string>
    <string name="new_question_added_to_exam">new question added to exam</string>
    <string name="missing_exam_id_or_question_id">Missing Exam id or question id</string>
    <string name="choose_position">Choose Position</string>
    <string name="swap">Swap</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_you_want_to_remove_question_detail_as_below_id_question_this_action_cannot_be_undone">Are you sure you want to remove question ?\nDetail as below:\nID\t: %1$s\nQuestion\t: %2$s\nThis action cannot be undone.</string>
    <string name="minute">%1$s Minute</string>
    <string name="question_detail">Question Detail</string>
    <string name="student_added">Student added</string>
    <string name="student_removed">Student removed</string>
    <string name="student_blocked">Student blocked</string>
    <string name="block">Block</string>
    <string name="are_you_sure_you_want_to_block_user_from_this_exam_user_detail_name_email">Are you sure you want to block user from this exam?\nUser detail:\nName\t: %1$s\nEmail\t: %2$s\n</string>
    <string name="are_you_sure_you_want_to_remove_user_from_this_exam_user_detail_name_email_this_action_cannot_be_undone">Are you sure you want to remove user from this exam?\nUser detail:\nName\t: %1$s\nEmail\t: %2$s\nThis action cannot be undone.</string>
    <string name="add_user">Add User</string>
    <string name="please_enter_email_user_make_sure_user_has_ben_registered">Please enter email user, make sure user has ben registered.</string>
    <string name="email_is_required">Email is required</string>
    <string name="add">Add</string>
    <string name="starting_at">"Starting at "</string>
    <string name="create_exam">Create Exam</string>
    <string name="create">Create</string>
    <string name="exam_created_successful">Exam created successful</string>
    <string name="join">Join</string>
    <string name="student">student</string>
    <string name="teacher">teacher</string>
    <string name="caution_the_exam_is_ongoing">Caution: The exam is ongoing.</string>
    <string name="you_cannot_change_anything_once_the_exam_has_started_such_as_adding_users_changing_questions_and_other_settings">You cannot change anything once the exam has started, such as adding users, changing questions and other settings.</string>
    <string name="students">Students</string>
    <string name="questions">Questions</string>
    <string name="blocked_users">Blocked users</string>
    <string name="data_not_found">Data not found</string>
    <string name="accept">Accept</string>
    <string name="finish_now">Finish Now</string>
    <string name="delete_exam">Delete Exam</string>
    <string name="start_exam_now">Start Exam Now</string>
    <string name="finish_exam_now">Finish Exam Now</string>
    <string name="are_you_sure_you_want_to_delete_this_exam_this_action_cannot_be_undone">Are you sure want to delete this exam?.\\nthis action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="the_exam_has_ended_you_cannot_make_any_changes">The exam has ended, you cannot make any changes.</string>
    <string name="cauntion_exam_has_ben_finished">Cauntion: Exam has ben finished</string>
    <string name="finished">Finished</string>
    <string name="text_continue">Continue</string>
    <string name="you_have_successfully_completed_the_exam_nthank_you_for_your_participation">You have successfully completed the exam.\nThank you for your participation.</string>
    <string name="congratulation">Congratulation</string>
    <string name="navigation_failed">Failed Navigation</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="maximum_exam_questions">Maximum exam questions</string>
    <string name="maximum_exam_participan">Maximum exam participan</string>
    <string name="exam_creation_quota">Exam creation quota</string>
    <string name="free_quota">Free Quota</string>
    <string name="month">month</string>
    <string name="upgrade_your_package">Upgrade your package</string>
    <string name="just_increase_your_quota">Just Increase your quota</string>
    <string name="get_price">Get Price</string>
    <string name="quota_must_be_greater_than_zero">Quota must be greater than zero</string>
    <string name="quota_must_be_filled">Quota must be filled</string>
    <string name="another_packages">Another Packages</string>
    <string name="remaining_quota_d">Remaining Quota: %d</string>
    <string name="do_you_really_want_to_leave">Do you really want to leave?</string>
    <string name="please_confirm_that_you_really_want_to_leave">Please confirm that you really want to leave!</string>
    <string name="ya_sure">Ya sure</string>
    <string name="your_current_package_b_b"><![CDATA[Your Current Package: <b>%1$s</b>]]></string>
    <string name="d_quota_remaining">%d Quota Remaining</string>
    <string name="buy_package">Buy Package</string>
    <string name="are_you_sure_you_want_to_buy_this_package_price_will_be_b_b"><![CDATA[Are you sure you want to buy this package?\nPrice will be <b>%1$s</b>]]></string>
    <string name="buy">Buy</string>
    <string name="price_detail">Price Detail</string>
    <string name="quota_will_cost_you">Quota %1$s will cost you <b>%2$s</b></string>
    <string name="your_quota_limit_has_been_reached">Your quota limit has been reached</string>
    <string name="go_back">Go Back</string>
    <string name="is_there_an_exam_today">is there an exam today?</string>
    <string name="hallo_">Hallo,</string>
</resources>