<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.fragment.IndexFragment">

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/primary_600"/>

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/text_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:text="@string/app_moto"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="25dp"
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textColor="@color/text_light"
        android:layout_marginHorizontal="35dp"
        android:backgroundTint="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_1" />

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/text_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        app:layout_constraintBottom_toTopOf="@id/login_button"/>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_marginTop="15dp"
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:strokeColor="@color/secondary"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_2" />

</androidx.constraintlayout.widget.ConstraintLayout>