<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.dashboard.home.HomeFragment"
    android:orientation="vertical">

    <com.il4mb.edudoexam.components.ui.AppBarContent
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="185dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/svg_palette"
                android:scaleY="1.5"
                android:scaleX="1.5"
                android:transformPivotX="300dp"
                android:transformPivotY="150dp"
                android:scaleType="centerCrop"
                android:alpha="0.7"
                app:tint="@color/colorAccent"/>
            <LinearLayout
                android:paddingTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/dp_14">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hallo_"/>
                    <TextView
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ILHAM B"
                        android:textSize="@dimen/text_lg"
                        android:textStyle="bold"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_there_an_exam_today"/>
                <com.il4mb.edudoexam.components.input.TextInput
                    style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/join_exam"
                    android:layout_marginTop="16dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:boxStrokeColor="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxBackgroundColor="#90BCBCBC"/>
            </LinearLayout>
        </FrameLayout>
    </com.il4mb.edudoexam.components.ui.AppBarContent>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp"
            android:clipToPadding="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding"
                android:clipToPadding="false">
                <!-- Ongoing Exams Section -->
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/ongoing_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/default_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ongoing_exams"
                        android:textSize="@dimen/text_md"
                        android:textStyle="bold"
                        android:layout_marginBottom="12dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:overScrollMode="never"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        android:id="@+id/recycler_view_ongoing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <!-- Upcoming Exams Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming_exams"
                        android:textSize="@dimen/text_md"
                        android:textStyle="bold"
                        android:layout_marginBottom="12dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:overScrollMode="never"
                        android:id="@+id/recycler_view_upcoming"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:visibility="gone"
                        android:id="@+id/upcoming_empty_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="200dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_md"
                        android:text="@string/no_upcoming_exams"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>
