<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.dashboard.exams.detail.config.ExamConfigFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_14"
            android:paddingBottom="300dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:visibility="gone"
                android:id="@+id/ongoing_warning_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_danger"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_14">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/caution_the_exam_is_ongoing"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/danger"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/you_cannot_change_anything_once_the_exam_has_started_such_as_adding_users_changing_questions_and_other_settings"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.capstone.edudoexam.components.input.InputTextEdit
                android:id="@+id/exam_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_14"
                app:endIcon="@drawable/baseline_content_copy_24"
                app:editable="false"
                app:hint="Exam Code" />

            <com.capstone.edudoexam.components.input.InputTextEdit
                android:id="@+id/exam_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_14"
                app:hint="Exam Title" />

            <com.capstone.edudoexam.components.input.InputTextEdit
                android:id="@+id/exam_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_14"
                app:hint="Exam subtitle" />

            <com.capstone.edudoexam.components.input.InputTextEdit
                android:id="@+id/exam_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_14"
                app:endIcon="@drawable/baseline_calendar_today_24"
                app:hint="Start date"
                app:editable="false"/>

            <com.capstone.edudoexam.components.input.InputTextEdit
                android:id="@+id/exam_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_14"
                app:endIcon="@drawable/baseline_calendar_today_24"
                app:hint="End date"
                app:editable="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_14"
                android:text="@string/blocked_users"
                android:textSize="@dimen/text_md"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/blocked_users_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="gone"
                android:id="@+id/empty_state"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/text_md"
                android:text="@string/data_not_found"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_18"
        android:layout_marginBottom="55dp"
        android:elevation="5dp"
        android:text="@string/save_changes"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
